[gd_scene load_steps=9 format=3 uid="uid://bu8w6ri5lucg3"]

[ext_resource type="Script" path="res://scripts/button.gd" id="1_5mikc"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_721w6"]
[ext_resource type="Texture2D" uid="uid://ccalu672bb6d3" path="res://assets/Buttons/guide.png" id="2_h15lv"]
[ext_resource type="Texture2D" uid="uid://ixx5fmmb1iga" path="res://assets/Buttons/guide_hover.png" id="4_kwrtl"]
[ext_resource type="Texture2D" uid="uid://bo1571bbva7ji" path="res://assets/guide_sheet.png" id="5_f86t2"]
[ext_resource type="Texture2D" uid="uid://dyxh6c3huuikc" path="res://assets/Buttons/x_button.png" id="5_qd6ql"]
[ext_resource type="Texture2D" uid="uid://dfsn1tpelo46c" path="res://assets/Buttons/x_button_hover.png" id="6_epufq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfjk8"]
size = Vector2(66.5, 58)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_721w6")

[node name="Guide Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 512.0
offset_right = 1088.0
offset_bottom = 576.0
toggle_mode = true
icon = ExtResource("2_h15lv")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("1_5mikc")
hoverTexture = ExtResource("4_kwrtl")
normalTexture = ExtResource("2_h15lv")

[node name="Area2D" type="Area2D" parent="Guide Button"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guide Button/Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_cfjk8")

[node name="GuideBG" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.454902)

[node name="GuideSheet" type="Sprite2D" parent="GuideBG"]
position = Vector2(576, 320)
scale = Vector2(0.551064, 0.551064)
texture = ExtResource("5_f86t2")

[node name="TextureRect" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = -232.278
offset_top = -304.865
offset_right = -192.278
offset_bottom = -264.865
scale = Vector2(0.2, 0.2)

[node name="TextureRect2" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = -58.0695
offset_top = -304.865
offset_right = -18.0695
offset_bottom = -264.865
scale = Vector2(0.2, 0.2)

[node name="TextureRect3" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = 101.622
offset_top = -304.865
offset_right = 141.622
offset_bottom = -264.865
scale = Vector2(0.2, 0.2)

[node name="TextureRect4" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = -232.278
offset_top = -43.5521
offset_right = -192.278
offset_bottom = -3.55212
scale = Vector2(0.2, 0.2)

[node name="TextureRect5" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = -58.0695
offset_top = -43.5521
offset_right = -18.0695
offset_bottom = -3.55212
scale = Vector2(0.2, 0.2)

[node name="TextureRect6" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = 101.622
offset_top = -43.5521
offset_right = 141.622
offset_bottom = -3.55212
scale = Vector2(0.2, 0.2)

[node name="TextureRect7" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = -232.278
offset_top = 188.726
offset_right = -192.278
offset_bottom = 228.726
scale = Vector2(0.2, 0.2)

[node name="TextureRect8" type="TextureRect" parent="GuideBG/GuideSheet"]
offset_left = -72.5869
offset_top = 188.726
offset_right = -32.5869
offset_bottom = 228.726
scale = Vector2(0.2, 0.2)

[node name="TextureRect9" type="TextureRect" parent="GuideBG/GuideSheet"]
layout_direction = 1
offset_left = 101.622
offset_top = 203.243
offset_right = 201.622
offset_bottom = 303.243
scale = Vector2(0.2, 0.2)
stretch_mode = 3

[node name="Close Guide" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 976.0
offset_top = 344.0
offset_right = 1160.0
offset_bottom = 504.0
toggle_mode = true
icon = ExtResource("5_qd6ql")
flat = true
expand_icon = true
script = ExtResource("1_5mikc")
hoverTexture = ExtResource("6_epufq")
normalTexture = ExtResource("5_qd6ql")

[node name="Area2D" type="Area2D" parent="Close Guide"]
position = Vector2(80, 80)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Close Guide/Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_cfjk8")

[connection signal="toggled" from="Guide Button" to="." method="_on_guide_button_toggled"]
[connection signal="area_entered" from="Guide Button/Area2D" to="Guide Button" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Guide Button/Area2D" to="Guide Button" method="_on_area_2d_area_exited"]
[connection signal="toggled" from="Close Guide" to="." method="_on_close_guide_toggled"]
[connection signal="area_entered" from="Close Guide/Area2D" to="Close Guide" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Close Guide/Area2D" to="Close Guide" method="_on_area_2d_area_exited"]
